--- a/res/layout/activity_add_contact.xml
+++ b/res/layout/activity_add_contact.xml
@@ -54,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/mm_listitem"
-        android:visibility="visible" >
+        android:visibility="gone" >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -106,5 +106,5 @@
         android:textColor="#000"
         android:textSize="20sp"
         android:gravity="center"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 </LinearLayout>
