--- a/res/layout/activity_new_group.xml
+++ b/res/layout/activity_new_group.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eee"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/layout_groups_avatar">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,12 +36,12 @@
             android:textSize="20sp" />
 
         <Button
+            android:id="@+id/saveGroup"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/common_tab_bg"
-            android:onClick="save"
             android:text="@string/button_save"
             android:textColor="#fff"
             android:textSize="18sp" />
