--- a/res/layout/row_add_group.xml
+++ b/res/layout/row_add_group.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <ImageView
+        <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/avatar"
             android:layout_width="55dp"
             android:layout_height="55dp"
